# cooagents

./: .coverage  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skills-lock.json
.coop/: state.db
.trellis/: .template-hashes.json
config/: agents.yaml  repos.yaml  settings.yaml
db/: schema.sql
docs/: PROCESS.md  openclaw-reference.md  openclaw-tools.json
pencil/: dashboard.pen  ui.pen
routes/: _metrics_common.py  _repo_refs_validation.py  agent_executions.py  agent_hosts.py  artifacts.py  auth.py  design_docs.py  design_works.py  dev_iteration_notes.py  dev_works.py  diagnostics.py  events.py  gates.py  metrics.py  metrics_repos.py  repos.py  reviews.py  runs.py  sse.py  webhooks.py  workspace_events.py  workspaces.py
scripts/: audit_filesystem_writes.py  bootstrap.sh  deploy.py  generate_password_hash.py  phase10_acceptance.py  phase10_seed.py  sim_worker.py  spike_acpx_session.py  tmux-dispatch.py  tmux-start-claude.sh  tmux-start-codex.sh  workflow-approve.sh  workflow-assign.py  workflow-notify-feishu.py  workflow-notify.py  workflow-retry.sh  workflow-start.sh  workflow-status.sh  workflow-tick-cron.py  workflow-tick-cron.sh  workflow-tick.sh  workflow.py  worktree-create.sh
src/: acpx_executor.py  acpx_janitor.py  acpx_remote_janitor.py  agent_executor.py  app.py  artifact_manager.py  auth.py  config.py  database.py  deployment.py  design_attachments.py  design_doc_manager.py  design_prompt_composer.py  design_validator.py  design_work_sm.py  dev_iteration_note_manager.py  dev_plan_audit.py  dev_prompt_composer.py  (+29 more)
(+317 files in other folders)
