[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooagents"
version = "0.2.0"
requires-python = ">=3.11"

[project.optional-dependencies]
# Phase 8b: install on agent host machines via `pip install cooagents[worker]`.
# The worker process needs httpx (cooagents API) and the OSS SDK
# (materialize). It does NOT need fastapi/uvicorn/aiosqlite at runtime.
worker = [
    "httpx>=0.27",
    "alibabacloud-oss-v2>=1.2",
]

[project.scripts]
cooagents-worker = "src.agent_worker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "routes*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (OSS, etc.); skipped without credentials",
    "slow: long-running tests gated by OSS_RUN_SLOW=1",
]
